cambio com nst 2

--- a/nosotros.html
+++ b/nosotros.html
@@ -110,43 +110,7 @@
 </head>
 <body>
   <!-- HEADER -->
-  <header>
-    <nav class="navbar">
-      <div class="container navbar-content">
-        <a href="index.html" class="logo">
-          <img src="assets/img/Greenhaul-fl.svg" alt="Logo de GreenHaul" />
-        </a>
-        <button class="navbar-toggler" id="navbarToggler" aria-label="Toggle navigation">
-          <span class="toggler-icon"></span>
-          <span class="toggler-icon"></span>
-          <span class="toggler-icon"></span>
-        </button>
-        <div class="navbar-collapse" id="navbarCollapse">
-          <ul class="nav-links-list">
-            <li><a href="index.html" class="nav-link">Inicio</a></li>
-            <li><a href="productos.html" class="nav-link">Productos</a></li>
-            <li><a href="servicios.html" class="nav-link">Servicios</a></li>
-            <li><a href="nosotros.html" class="nav-link active">Nosotros</a></li>
-            <li><a href="contacto.html" class="nav-link">Contacto</a></li>
-            <li><a href="faq.html" class="nav-link">Preguntas</a></li>
-          </ul>
-          <div class="navbar-right-items">
-            <div class="navbar-user-actions" id="navbarUserActions">
-              <a href="login.html" class="btn btn-outline" id="loginBtn">Iniciar Sesión</a>
-              <a href="cuenta.html" class="nav-link" id="accountLink" style="display: none;">Hola, <span id="userName"></span></a>
-              <button class="btn-tertiary" id="logoutBtn" style="display: none;" title="Cerrar Sesión"><i class="fas fa-sign-out-alt"></i></button>
-            </div>
-            <div class="nav-icons">
-              <a href="#" class="nav-icon cart-icon" id="cartIcon">
-                <i class="fas fa-shopping-cart"></i>
-                <span class="cart-count" id="cartCount">0</span>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </nav>
-  </header>
+  <!-- (ya incluido en main.js) -->
 
   <!-- CONTENIDO -->
   <main class="page-content">
@@ -219,10 +183,10 @@
     </section>
   </main>
 
-  <!-- FOOTER INTACTO -->
-  <footer class="footer">...</footer>
-  <div class="cart-modal-overlay" id="cartModalOverlay">...</div>
-  <div class="cart-notification" id="cartNotification">...</div>
+  <!-- FOOTER + MODALES + SCRIPT -->
+  <footer class="footer"></footer>
+  <div class="cart-modal-overlay" id="cartModalOverlay"></div>
+  <div class="cart-notification" id="cartNotification"></div>
   <script type="module" src="assets/js/main.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
