cambio nst gem 4

--- a/nosotros.html
+++ b/nosotros.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="assets/css/styles.css" />
   <link rel="stylesheet" href="assets/css/pages.css" />
   <style>
-    /* Animaciones locales */
     .section-title, .timeline p, .impacto-grid div, .benefit-card, .equipo p {
       opacity: 0;
       transform: translateY(30px);
@@ -20,7 +19,6 @@
       transform: translateY(0) !important;
     }
 
-    /* Línea del tiempo moderna */
     .timeline {
       position: relative;
       margin-top: 3rem;
@@ -109,10 +107,8 @@
   </style>
 </head>
 <body>
-  <!-- HEADER -->
-  <!-- (ya incluido en main.js) -->
+  <header></header>
 
-  <!-- CONTENIDO -->
   <main class="page-content">
     <section class="section hero-style">
       <div class="container">
@@ -183,7 +179,6 @@
     </section>
   </main>
 
-  <!-- FOOTER + MODALES + SCRIPT -->
   <footer class="footer"></footer>
   <div class="cart-modal-overlay" id="cartModalOverlay"></div>
   <div class="cart-notification" id="cartNotification"></div>
