--- a/contacto.html
+++ b/contacto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto - GreenHaul</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <style>
         .contact-page-section {
@@ -285,7 +285,7 @@
                         </ul>
                     </div>
                     <div class="map-container-full">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3762.523315934416!2d-99.1685!3d19.4326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1f8d2b2b2b2b2%3A0x8b8b8b8b8b8b8b8b!2sAngel%20de%20la%20Independencia!5e0!3m2!1ses-419!2smx!4v1627000000000" allowfullscreen="" loading="lazy"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d60200.41933753444!2d-99.2098934486328!3d19.4326077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1f93531b145cf%3A0x55448a9a5f78c813!2sZ%C3%B3calo!5e0!3m2!1ses!2smx!4v1721861214083!5m2!1ses!2smx" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </div>
@@ -325,7 +325,7 @@
         </div>
     </div>
     <div class="footer-bottom">
-        &copy; <span id="current-year"></span> greenhauL. Todos los derechos reservados.
+        © <span id="current-year"></span> greenhauL. Todos los derechos reservados.
     </div>
 </footer>
 <div class="cart-modal-overlay" id="cartModalOverlay">
