--- a/faq.html
+++ b/faq.html
@@ -163,7 +163,7 @@
     </div>
 
     <script type="module" src="assets/js/main.js"></script>
-    <script type="module" src="assets/js/faq.js"></script>
+    <script src="assets/js/faq.js"></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
